--- a/FlappyBird/FlappyBird.csproj
+++ b/FlappyBird/FlappyBird.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="hatter.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="hatter.jpg" />
+  </ItemGroup>
+
 </Project>
