--- a/FlappyBird/FlappyBird.csproj
+++ b/FlappyBird/FlappyBird.csproj
@@ -9,12 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="flappyBird.png" />
     <None Remove="hatter.jpg" />
     <None Remove="pipeBottom.png" />
     <None Remove="pipeTop.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="flappyBird.png" />
     <Resource Include="hatter.jpg" />
     <Resource Include="pipeBottom.png" />
     <Resource Include="pipeTop.png" />
